# gmorbits

./: .gitignore  README.md  main.py  pyproject.toml
gmorbits/: __init__.py  constants.py  main.py  methods.py  plot.py  potentials.py  structures.py
gmorbits/methods/: __init__.py
gmorbits/methods/_non_symplectic/: _explicit_euler.py
gmorbits/methods/_symplectic/: _symplectic_euler.py
gmorbits/potentials/: __init__.py  _homogeneous_sphere.py  _isochrone.py  _kepler.py  _nfw.py
